feat: Cambios en CSS y enlaces de articulos

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
         
         <div class="search">
-            <input type="text" id="search-text" class="search__text" placeholder="Buscar en Wikipedia" onkeyup="handleKeyPress(event)">
-            <button type="button" id="btn" class="btn" value="btn" title="btn" onclick="obtenerTexto()">
-                <i class="fas fa-search"></i>
-            </button>
+            <input type="text" id="search-text" class="search__text input" placeholder="Buscar en Wikipedia" onkeyup="handleKeyPress(event)">
+            <!-- <button type="button" id="btn" class="btn" value="btn" title="btn" onclick="obtenerTexto()">
+                Buscar <i class="fas fa-search"></i>
+            </button> -->
         </div>
         <div id="error" class="error">
             <p id="errorMensaje" class="error__mensaje"></p>
@@ -32,6 +32,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="js/axios.js"></script>
+     <script src="js/axios.js"></script> 
 </body>
 </html>
